--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="mesa_updates_error_tablet">"Can't check for updates. Your tablet's network connection isn't stable."</string>
     <string name="mesa_no_network_connection">No network connection</string>
     <string name="mesa_credits">Credits</string>
+    <string name="mesa_credits_desc">The following page contains all the libraries/code snippets used in this app.</string>
     <string name="mesa_open_source_licence">Open source licenses</string>
     <string name="mesa_update">Update</string>
     <string name="mesa_retry">Retry</string>
