--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="mesa_cerberustestux">Cerberus UI Test</string>
 
-    <string name="mesa_pleasewait">Please wait...</string>
+    <string name="mesa_pleasewait">Please wait…</string>
     <string name="mesa_cancel">Cancel</string>
 
     <string name="mesa_tab_tts">Tab %1$d of %2$d</string>
